syntax = "proto3";

package Rpc;

message FileInfo {
  string name = 1;
  string owner = 2;
  uint64 access_time = 3;
  string mime_type = 4;
}

message NodeId {
  uint32 page_id = 1;
  uint32 item_id = 2;
}

message CreateFileNodeRequest {
  FileInfo file_info = 1;
  NodeId parent_id = 2;
}

message CreateFileNodeResponse {
  NodeId node_id = 1;
}

service Database {
  rpc CreateFileNode(CreateFileNodeRequest) returns (CreateFileNodeResponse);
}